--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>org.eclipse.incquery</groupId>
 	<artifactId>org.eclipse.incquery.parent</artifactId>
 	<name>EMF-IncQuery</name>
-	<url>http://viatra.inf.mit.bme.hu/incquery</url>
+	<url>http://eclipse.org/incquery</url>
 	<version>0.7.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
@@ -61,7 +61,8 @@
 		<tycho.version>0.17.0-SNAPSHOT</tycho.version>
 		<tycho.extras.version>0.17.0-SNAPSHOT</tycho.extras.version>
 		<tycho.groupId>org.eclipse.tycho</tycho.groupId>
-		<tycho.scmUrl>scm:git:git://github.com/ujhelyiz/EMF-IncQuery.git</tycho.scmUrl>
+		<tycho.scmUrl>scm:git:git://git.eclipse.org/gitroot/incquery/org.eclipse.incquery.git</tycho.scmUrl>
+		<eclipse.bugzillaUrl>https://bugs.eclipse.org/bugs/buglist.cgi?product=Incquery</eclipse.bugzillaUrl>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.showWarnings>true</maven.compiler.showWarnings>
 		<jacoco.version>0.6.0.201210061924</jacoco.version>
@@ -241,15 +242,15 @@
 	</pluginRepositories>
 	<scm>
 		<connection>${tycho.scmUrl}</connection>
-		<url>https://github.com/ujhelyiz/EMF-IncQuery</url>
+		<url>http://git.eclipse.org/c/incquery/org.eclipse.incquery.git/</url>
 	</scm>
 	<ciManagement>
 		<url>https://build.inf.mit.bme.hu/jenkins</url>
 		<system>Jenkins</system>
 	</ciManagement>
 	<issueManagement>
-		<url>https://github.com/ujhelyiz/EMF-IncQuery/issues</url>
-		<system>GitHub Issues</system>
+		<url>${eclipse.bugzillaUrl}</url>
+		<system>Bugzilla</system>
 	</issueManagement>
 	<profiles>
 		<profile>
