--- a/plugins/org.eclipse.incquery.runtime.triggerengine/.project
+++ b/plugins/org.eclipse.incquery.runtime.triggerengine/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.incquery.runtime.triggerengine</name>
+	<name>org.eclipse.incquery.runtime.evm</name>
 	<comment></comment>
 	<projects>
 	</projects>
