--- a/plugins/org.eclipse.incquery.runtime.triggerengine/pom.xml
+++ b/plugins/org.eclipse.incquery.runtime.triggerengine/pom.xml
@@ -8,6 +8,6 @@
 		<version>0.7.0-SNAPSHOT</version>
 		<relativePath>../../releng/org.eclipse.incquery.parent/pom.xml</relativePath>
 	</parent>
-  <artifactId>org.eclipse.incquery.runtime.triggerengine</artifactId>
+  <artifactId>org.eclipse.incquery.runtime.evm</artifactId>
   <packaging>eclipse-plugin</packaging>
 </project>
