[398827] Preliminary treeviewer support  Major issues with child-parent relation updates  NEW - Support query-based viewers  https://bugs.eclipse.org/bugs/show_bug.cgi?id=398827

--- a/plugins/org.eclipse.incquery.viewers.runtime/plugin.xml
+++ b/plugins/org.eclipse.incquery.viewers.runtime/plugin.xml
@@ -43,7 +43,7 @@
                mandatory="true"
                multiple="false"
                name="item"
-               type="string">
+               type="variablereference">
          </annotationparameter>
       </annotation>
       <annotation
