--- a/plugins/org.eclipse.incquery.validation.runtime/plugin.xml
+++ b/plugins/org.eclipse.incquery.validation.runtime/plugin.xml
@@ -13,7 +13,7 @@
                mandatory="true"
                multiple="false"
                name="location"
-               type="string">
+               type="variablereference">
          </annotationparameter>
          <annotationparameter
                description="The message to display when the constraint violation is found. The message may refer the parameter variables between $ symbols, or their EMF features, such as in $Param1.name$."
