pom updates for eclipse.org build

--- a/releng/org.eclipse.incquery.update/pom.xml
+++ b/releng/org.eclipse.incquery.update/pom.xml
@@ -59,7 +59,7 @@
 			<activation>
 				<activeByDefault>false</activeByDefault>				
 				<property>
-					<name>release</name>
+					<name>BUILD_TYPE</name>
 				</property>
 			</activation>
 			<build>
