--- a/releng/org.eclipse.incquery.update/pom.xml
+++ b/releng/org.eclipse.incquery.update/pom.xml
@@ -61,6 +61,9 @@
 				<property>
 					<name>BUILD_TYPE</name>
 				</property>
+				<file>
+					<exists>mirrorsite</exists>
+				</file>
 			</activation>
 			<build>
 				<plugins>
