[398822] Big refactor on GMF load resource support for Query Explorer - ASSIGNED https://bugs.eclipse.org/bugs/show_bug.cgi?id=398822

--- a/plugins/org.eclipse.incquery.tooling.ui.patternregistry/plugin.xml
+++ b/plugins/org.eclipse.incquery.tooling.ui.patternregistry/plugin.xml
@@ -4,10 +4,12 @@
    <extension
          point="org.eclipse.ui.commands">
       <command
+            categoryId="org.eclipse.incquery.tooling.category"
             id="org.eclipse.incquery.tooling.ui.patternregistry.registeralleiq"
             name="Register All EIQ">
       </command>
       <command
+            categoryId="org.eclipse.incquery.tooling.category"
             id="org.eclipse.incquery.tooling.ui.patternregistry.registersingleeiq"
             name="Register Single EIQ">
       </command>
