--- a/plugins/org.eclipse.incquery.runtime.gmf/plugin.xml
+++ b/plugins/org.eclipse.incquery.runtime.gmf/plugin.xml
@@ -3,35 +3,8 @@
 <plugin>
    <extension
          point="org.eclipse.ui.handlers">
-       <handler
-            class="org.eclipse.incquery.runtime.gmf.handlers.GMFEditorLoadResourceSetHandler"
-            commandId="org.eclipse.incquery.tooling.ui.loadmodel">
-         <activeWhen>
-            <reference
-                  definitionId="org.eclipse.incquery.runtime.gmf.editorDefinition">
-            </reference>
-         </activeWhen>
-      </handler>
       <handler
-            class="org.eclipse.incquery.runtime.gmf.handlers.GMFEditorLoadResourceSetHandler"
-            commandId="org.eclipse.incquery.tooling.ui.loadresourceset">
-         <activeWhen>
-            <reference
-                  definitionId="org.eclipse.incquery.runtime.gmf.editorDefinition">
-            </reference>
-         </activeWhen>
-      </handler>
-      <handler
-            class="org.eclipse.incquery.runtime.gmf.handlers.GMFEditorLoadResourceHandler"
-            commandId="org.eclipse.incquery.tooling.ui.loadresource">
-         <activeWhen>
-            <reference
-                  definitionId="org.eclipse.incquery.runtime.gmf.editorDefinition">
-            </reference>
-         </activeWhen>
-      </handler>
-      <handler
-            class="org.eclipse.incquery.runtime.gmf.handlers.InitValidatorsHandler"
+            class="org.eclipse.incquery.runtime.gmf.InitValidatorsHandler"
             commandId="org.eclipse.incquery.validation.runtime.ui.initValidatorsOnEditor">
          <activeWhen>
             <reference
@@ -60,30 +33,16 @@
          point="org.eclipse.core.runtime.adapters">
       <factory
             adaptableType="org.eclipse.gmf.runtime.diagram.ui.resources.editor.parts.DiagramDocumentEditor"
-            class="org.eclipse.incquery.runtime.gmf.adapters.ResourceSetAdapterFactoryForGMFEditors">
+            class="org.eclipse.incquery.runtime.gmf.ModelConnectorAdapterFactoryForGMFEditors">
          <adapter
-               type="org.eclipse.emf.ecore.resource.ResourceSet">
+               type="org.eclipse.incquery.runtime.api.IModelConnector">
          </adapter>
       </factory>
       <factory
             adaptableType="org.eclipse.gmf.runtime.diagram.ui.parts.IDiagramWorkbenchPart"
-            class="org.eclipse.incquery.runtime.gmf.adapters.ResourceSetAdapterFactoryForGMFEditors">
+            class="org.eclipse.incquery.runtime.gmf.ModelConnectorAdapterFactoryForGMFEditors">
          <adapter
-               type="org.eclipse.emf.ecore.resource.ResourceSet">
-         </adapter>
-      </factory>
-      <factory
-            adaptableType="org.eclipse.gmf.runtime.diagram.ui.resources.editor.parts.DiagramDocumentEditor"
-            class="org.eclipse.incquery.runtime.gmf.adapters.ResourceAdapterFactoryForGMFEditors">
-         <adapter
-               type="org.eclipse.emf.ecore.resource.Resource">
-         </adapter>
-      </factory>
-      <factory
-            adaptableType="org.eclipse.gmf.runtime.diagram.ui.parts.IDiagramWorkbenchPart"
-            class="org.eclipse.incquery.runtime.gmf.adapters.ResourceAdapterFactoryForGMFEditors">
-         <adapter
-               type="org.eclipse.emf.ecore.resource.Resource">
+               type="org.eclipse.incquery.runtime.api.IModelConnector">
          </adapter>
       </factory>
    </extension>
