--- a/plugins/org.eclipse.incquery.runtime.graphiti/plugin.xml
+++ b/plugins/org.eclipse.incquery.runtime.graphiti/plugin.xml
@@ -2,45 +2,13 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension
-         point="org.eclipse.ui.handlers">
-      <handler
-            class="org.eclipse.incquery.runtime.graphiti.handlers.GraphitiEditorLoadModelHandler"
-            commandId="org.eclipse.incquery.tooling.ui.loadmodel">
-         <activeWhen>
-            <reference
-                  definitionId="org.eclipse.incquery.runtime.graphiti.editorDefinition">
-            </reference>
-         </activeWhen>
-      </handler>
-      <handler
-            class="org.eclipse.incquery.runtime.graphiti.handlers.GraphitiEditorLoadResourceHandler"
-            commandId="org.eclipse.incquery.tooling.ui.loadresource">
-         <activeWhen>
-            <reference
-                  definitionId="org.eclipse.incquery.runtime.graphiti.editorDefinition">
-            </reference>
-         </activeWhen>
-      </handler>
-      <handler
-            class="org.eclipse.incquery.runtime.graphiti.handlers.GraphitiEditorLoadModelHandler"
-            commandId="org.eclipse.incquery.tooling.ui.loadresourceset">
-         <activeWhen>
-            <reference
-                  definitionId="org.eclipse.incquery.runtime.graphiti.editorDefinition">
-            </reference>
-         </activeWhen>
-      </handler>
+         point="org.eclipse.core.runtime.adapters">
+      <factory
+            adaptableType="org.eclipse.graphiti.ui.editor.DiagramEditor"
+            class="org.eclipse.incquery.runtime.graphiti.ModelConnectorAdapterFactoryForGraphiti">
+         <adapter
+               type="org.eclipse.incquery.runtime.api.IModelConnector">
+         </adapter>
+      </factory>
    </extension>
-   <extension
-         point="org.eclipse.core.expressions.definitions">
-      <definition
-            id="org.eclipse.incquery.runtime.graphiti.editorDefinition">
-         <with variable="activeEditorId">
-            <equals
-                  value="org.eclipse.graphiti.ui.editor.DiagramEditor">
-            </equals>
-         </with>
-      </definition>
-   </extension>
-
 </plugin>
