[398822] Minor naming refactor - GMF load resource support for Query Explorer - ASSIGNED https://bugs.eclipse.org/bugs/show_bug.cgi?id=398822

--- a/plugins/org.eclipse.incquery.tooling.ui/plugin.xml
+++ b/plugins/org.eclipse.incquery.tooling.ui/plugin.xml
@@ -200,7 +200,7 @@
             commandId="org.eclipse.incquery.tooling.ui.runtimematcherreg">
       </handler>
       <handler
-            class="org.eclipse.incquery.tooling.ui.IncQueryLanguageExecutableExtensionFactory:org.eclipse.incquery.tooling.ui.queryexplorer.handlers.LoadModelHandler"
+            class="org.eclipse.incquery.tooling.ui.IncQueryLanguageExecutableExtensionFactory:org.eclipse.incquery.tooling.ui.queryexplorer.handlers.LoadResourceSetHandler"
             commandId="org.eclipse.incquery.tooling.ui.loadmodel">
          <activeWhen>
             <reference
