--- a/tests/org.eclipse.incquery.testing.ui/plugin.xml
+++ b/tests/org.eclipse.incquery.testing.ui/plugin.xml
@@ -5,19 +5,19 @@
          point="org.eclipse.ui.menus">
      <menuContribution
             allPopups="false"
-            locationURI="popup:org.eclipse.viatra2.emf.incquery.queryexplorer.QueryExplorer.treeViewerMenu">
+            locationURI="popup:org.eclipse.incquery.tooling.ui.queryexplorer.QueryExplorer.treeViewerMenu">
          <command
-               commandId="org.eclipse.viatra2.emf.incquery.testing.gui.snapshot"
+               commandId="org.eclipse.incquery.testing.ui.snapshot"
                label="Save EMF-IncQuery snapshot"
                style="push">
             <visibleWhen
                   checkEnabled="false">
                   <or>
                     <reference
-                       definitionId="org.eclipse.viatra2.emf.incquery.tooling.gui.matcher">
+                       definitionId="org.eclipse.incquery.tooling.ui.matcher">
                     </reference>
                     <reference
-                       definitionId="org.eclipse.viatra2.emf.incquery.tooling.gui.root">
+                       definitionId="org.eclipse.incquery.tooling.ui.root">
                     </reference>
                   </or>
             </visibleWhen>
@@ -27,15 +27,15 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            class="org.eclipse.viatra2.emf.incquery.testing.ui.IncQueryLanguageExecutableExtensionFactory:org.eclipse.viatra2.emf.incquery.testing.ui.handlers.SaveSnapshotHandler"
-            commandId="org.eclipse.viatra2.emf.incquery.testing.gui.snapshot">
+            class="org.eclipse.incquery.testing.ui.IncQueryLanguageExecutableExtensionFactory:org.eclipse.incquery.testing.ui.handlers.SaveSnapshotHandler"
+            commandId="org.eclipse.incquery.testing.ui.snapshot">
       </handler>  
    </extension>
    <extension
          point="org.eclipse.ui.commands">
       <command
-            categoryId="org.eclipse.viatra2.emf.incquery.tooling.category"
-            id="org.eclipse.viatra2.emf.incquery.testing.gui.snapshot"
+            categoryId="org.eclipse.incquery.tooling.category"
+            id="org.eclipse.incquery.testing.ui.snapshot"
             name="Save EMF-IncQuery snapshot">
       </command>
     </extension>
