[398636] Pattern Registry Runtime - ASSIGNED https://bugs.eclipse.org/bugs/show_bug.cgi?id=398636

--- a/plugins/org.eclipse.incquery.tooling.ui.patternregistry/plugin.xml
+++ b/plugins/org.eclipse.incquery.tooling.ui.patternregistry/plugin.xml
@@ -33,7 +33,7 @@
    <extension
          point="org.eclipse.ui.menus">
       <menuContribution
-            locationURI="popup:org.eclipse.ui.popup.any">
+            locationURI="popup:org.eclipse.jdt.ui.PackageExplorer">
          <command
                commandId="org.eclipse.incquery.tooling.ui.patternregistry.registeralleiq"
                icon="icons/add.gif"
