--- a/plugins/org.eclipse.incquery.tooling.generator.model.ui/plugin.xml
+++ b/plugins/org.eclipse.incquery.tooling.generator.model.ui/plugin.xml
@@ -6,12 +6,13 @@
     <extension
             point="org.eclipse.ui.editors">
         <editor
-            class="org.eclipse.incquery.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
-            contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
-            default="true"
-            extensions="eiqgen"
-            id="org.eclipse.incquery.tooling.generator.model.GeneratorModel"
-            name="GeneratorModel Editor">
+              class="org.eclipse.incquery.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
+              contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
+              default="true"
+              extensions="eiqgen"
+              icon="platform:/plugin/org.eclipse.incquery.tooling.ui/icons/logo2.png"
+              id="org.eclipse.incquery.tooling.generator.model.GeneratorModel"
+              name="GeneratorModel Editor">
         </editor>
     </extension>
     <extension
