[398636] Pattern Registry Runtime - ASSIGNED Prototype listener before builder change tracking approach. https://bugs.eclipse.org/bugs/show_bug.cgi?id=398636

--- a/plugins/org.eclipse.incquery.tooling.ui.patternregistry/plugin.xml
+++ b/plugins/org.eclipse.incquery.tooling.ui.patternregistry/plugin.xml
@@ -133,7 +133,7 @@
          point="org.eclipse.ui.views">
       <view
             category="org.eclipse.incquery.tooling.ui"
-            class="org.eclipse.incquery.tooling.ui.patternregistry.views.PatternRegistryViewPart"
+            class="org.eclipse.incquery.tooling.ui.patternregistry.PatternRegistryExecutableExtensionFactory:org.eclipse.incquery.tooling.ui.patternregistry.views.PatternRegistryViewPart"
             icon="platform:/plugin/org.eclipse.incquery.tooling.ui/icons/logo2.png"
             id="org.eclipse.incquery.tooling.ui.patternregistry.view"
             name="Pattern Registry"
