[398636] Pattern Registry Runtime - ASSIGNED Some refactor based on Abel's changes. https://bugs.eclipse.org/bugs/show_bug.cgi?id=398636

--- a/plugins/org.eclipse.incquery.viewers.tooling.ui/plugin.xml
+++ b/plugins/org.eclipse.incquery.viewers.tooling.ui/plugin.xml
@@ -30,7 +30,7 @@
       <view
             category="org.eclipse.incquery.tooling.ui"
             class="org.eclipse.incquery.viewers.tooling.ui.views.ViewerSandboxView"
-            icon="platform:/plugin/org.eclipse.incquery.tooling.ui/icons/logo.png"
+            icon="platform:/plugin/org.eclipse.incquery.tooling.ui/icons/logo2.png"
             id="org.eclipse.incquery.viewers.tooling.ui.sandbox"
             name="IncQuery Viewers Sandbox"
             restorable="true">
