[398827] Added query-based viewers to the build

--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -60,8 +60,13 @@
 		<module>../../features/org.eclipse.incquery.validation.tooling.feature</module>
 		<module>../../features/org.eclipse.incquery.runtime.gmf.feature</module>
 		<module>../../features/org.eclipse.incquery.runtime.graphiti.feature</module>
+		<module>../../features/org.eclipse.incquery.viewers.runtime.feature</module>
+		<module>../../features/org.eclipse.incquery.viewers.tooling.ui.feature</module>
+		<module>../../features/org.eclipse.incquery.viewers.runtime.zest.feature</module>
+		<module>../../features/org.eclipse.incquery.viewers.tooling.ui.zest.feature</module>
 		<module>../../releng/org.eclipse.incquery.licence.feature</module>
 		<module>../../releng/org.eclipse.incquery.update</module>
+		<module>../../releng/org.eclipse.incquery.update.extras</module>
 	</modules>
 	<properties>
 		<tycho.version>0.17.0</tycho.version>
