--- a/headless/org.eclipse.incquery.application/build.properties
+++ b/headless/org.eclipse.incquery.application/build.properties
@@ -1,5 +1,5 @@
-source.. = src/
-output.. = bin/
+1source.. = src/
 bin.includes = META-INF/,\
                .,\
                plugin.xml
+source.. = src/
