[398636] Pattern Registry Runtime - Build support for extra update site. https://bugs.eclipse.org/bugs/show_bug.cgi?id=398636

--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -20,6 +20,7 @@
 		<module>../../plugins/org.eclipse.incquery.runtime</module>
 		<module>../../plugins/org.eclipse.incquery.runtime.base</module>
 		<module>../../plugins/org.eclipse.incquery.runtime.base.itc</module>
+		<module>../../plugins/org.eclipse.incquery.runtime.patternregistry</module>
 		<module>../../plugins/org.eclipse.incquery.runtime.rete</module>
 		<module>../../plugins/org.eclipse.incquery.runtime.evm</module>
 		<module>../../plugins/org.eclipse.incquery.tooling.core</module>
@@ -60,6 +61,7 @@
 		<module>../../features/org.eclipse.incquery.validation.tooling.feature</module>
 		<module>../../features/org.eclipse.incquery.runtime.gmf.feature</module>
 		<module>../../features/org.eclipse.incquery.runtime.graphiti.feature</module>
+		<module>../../features/org.eclipse.incquery.runtime.patternregistry.feature</module>
 		<module>../../features/org.eclipse.incquery.viewers.runtime.feature</module>
 		<module>../../features/org.eclipse.incquery.viewers.tooling.ui.feature</module>
 		<module>../../features/org.eclipse.incquery.viewers.runtime.zest.feature</module>
