--- a/plugins/org.eclipse.incquery.tooling.ui.retevis/plugin.xml
+++ b/plugins/org.eclipse.incquery.tooling.ui.retevis/plugin.xml
@@ -12,5 +12,57 @@
             id="org.eclipse.incquery.tooling.ui.retevis.views.ReteVisView">
       </view>
    </extension>
+   
+   
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:org.eclipse.incquery.tooling.ui.queryexplorer.QueryExplorer.treeViewerMenu">
+         <command
+               commandId="org.eclipse.incquery.tooling.ui.initReteVis"
+               label="(Re)initialize Rete Visualizer"
+               style="push">
+         </command>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            categoryId="org.eclipse.incquery.tooling.ui.retevis.category"
+            id="org.eclipse.incquery.tooling.ui.initReteVis"
+            name="(Re)initialize Rete Visualizer">
+      </command>
+      <category
+            id="org.eclipse.incquery.tooling.ui.retevis.category"
+            name="IncQuery Rete Visualizer">
+      </category>
+   </extension>
+   
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="org.eclipse.incquery.tooling.ui.retevis.handlers.InitializeRetevisHandler"
+            commandId="org.eclipse.incquery.tooling.ui.initReteVis">
+         <enabledWhen>
+            <with
+                  variable="selection">
+               <count
+                     value="1">
+               </count>
+               <iterate>
+                  <or>
+                     <instanceof
+                           value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.ObservablePatternMatcher">
+                     </instanceof>
+                     <instanceof
+                           value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.ObservablePatternMatcherRoot">
+                     </instanceof>
+                  </or>
+               </iterate>
+            </with>
+         </enabledWhen>
+      </handler>
+   </extension>
 
 </plugin>
