--- a/tests/org.eclipse.incquery.testing.queries/plugin.xml
+++ b/tests/org.eclipse.incquery.testing.queries/plugin.xml
@@ -4,17 +4,17 @@
 
    <extension
          id="org.eclipse.incquery.testing.queries.UnexpectedMatchRecord"
-         point="org.eclipse.incquery.runtime.matcherfactory">
+         point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            factoryProvider="org.eclipse.incquery.testing.queries.unexpectedmatchrecord.UnexpectedMatchRecordMatcherFactory$Provider"
+            querySpecificationProvider="org.eclipse.incquery.testing.queries.unexpectedmatchrecord.UnexpectedMatchRecordQuerySpecification$Provider"
             id="org.eclipse.incquery.testing.queries.UnexpectedMatchRecord">
       </matcher>
    </extension>
    <extension
          id="org.eclipse.incquery.testing.queries.RecordRoleValue"
-         point="org.eclipse.incquery.runtime.matcherfactory">
+         point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            factoryProvider="org.eclipse.incquery.testing.queries.recordrolevalue.RecordRoleValueMatcherFactory$Provider"
+            querySpecificationProvider="org.eclipse.incquery.testing.queries.recordrolevalue.RecordRoleValueQuerySpecification$Provider"
             id="org.eclipse.incquery.testing.queries.RecordRoleValue">
       </matcher>
    </extension>
@@ -29,9 +29,9 @@
    </extension>
    <extension
          id="org.eclipse.incquery.testing.queries.SubstitutionValue"
-         point="org.eclipse.incquery.runtime.matcherfactory">
+         point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            factoryProvider="org.eclipse.incquery.testing.queries.substitutionvalue.SubstitutionValueMatcherFactory$Provider"
+            querySpecificationProvider="org.eclipse.incquery.testing.queries.substitutionvalue.SubstitutionValueQuerySpecification$Provider"
             id="org.eclipse.incquery.testing.queries.SubstitutionValue">
       </matcher>
    </extension>
